# dynamic_pricing

./: RESULT.MD  file.txt  pyproject.toml
app/experiments/: base_experiments.py  new_algorithm_experiments.py  new_algorithm_experiments_iterates.py  new_algorithm_v2_experiments_iterates.py
app/logs/: PricingSomeMethod_algorithm.txt  PricingSomeMethodv2_algorithm.txt  PricingSomeMethodv3_algorithm.txt  PricingSomeMethodv4_algorithm.txt  file.txt  file_new_algorithm.txt
app/utils/: acceptance_rule.py  default_strategy.py  event_generator.py  hotel.py  pricing.py  request.py
