[tool.poetry]
name = "dynamic_pricing"
version = "0.1.0"
description = ""
authors = ["kozlowladimir <kozlowladimir@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
scipy = "^1.8.0"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
